src/scss/pages/_blog.scss
// Blog

.page-blog-container {
  max-width: 70em;
}

.page-blog {

  background-color: $white;
  line-height: 1.5em;
  padding: 1.5em;

  h2 {
    margin-bottom: 1em;
    padding-top: 0.5em;
  }

  h3 {
    color: $header-level-3-color;
    font-weight: $default-font-normal;
    margin: 2em 0 1em 0;
  }

}

.post {
  margin: 0 0 3em 0;
}

.figure {

  margin: 1.5em 0;

  figcaption {
    border-top: solid 1px $palette-dark;
    color: $palette-dark;
    font-size: 0.9em;
    margin-top: 0.5em;
  }

  img {
    height: auto;
    max-width: 100%;
  }

}

.blog-title {

  .tag {
    display: inline-block;
    font-size: 0.8em;
    line-height: 1.5em;
    margin-left: 0.5em;
    vertical-align: top;
  }

}

.blog-meta {
  color: $dark-grey;
  line-height: 2.3em;
  margin: 1.5em 0;
}

.author-meta {
  border: solid 1px $light-grey;
  border-radius: 8px;
  color: $black;
  display: inline-block;
  margin-bottom: 0.5em;
  padding: 0.5em 0.75em 0.4em 0.5em;

  .avatar {
    border: solid 1px $light-grey;
    border-radius: 50%;
    margin: -4px 8px 0 0;
    vertical-align: middle;
  }
}

.tag-meta {

  + h2 {
    margin-top: 0.7em;
  }

  .category,
  .post-date,
  [rel="tag"] {

    border: solid 1px $mla-blue;
    border-radius: 3px;
    margin-right: 10px;
    padding: 3px 8px;
    text-decoration: none;
    white-space: nowrap;

    &:hover {
      background-color: $mla-blue;
      color: $white;
      text-decoration: none;
    }

    .count {
      color: $light-mla-blue;
    }

  }

  .category {

    border-color: $palette-orange;
    color: $palette-orange;
    font-weight: $default-font-bold;

    &:hover {
      background-color: $palette-orange;
    }

  }

  .post-date {

    border-color: $dark-grey;
    color: $dark-grey;

    &:hover {
      background-color: $dark-grey;
    }

  }

}

.category.category-ask-the-mla {

  .category-ask-the-mla {

    margin-bottom: 1em;

    h2 {
      font-size: 1.2em;
    }

    h3,
    h4,
    p,
    blockquote,
    br,
    ol,
    ul,
    .blog-meta {
      display: none;
    }

  }

}

.ask-a-question-container {
  border: solid 1px $light-grey;
  border-radius: 5px;
  padding: 0.5em 1em 0 1em;

  .button {
    @include material-plus-one;
  }
}

.emoji {
  font-size: 1.4em;
}

.pagination {

  display: flex;

  .nav-previous,
  .nav-next {
    flex: 1;
  }

  .nav-next {
    text-align: right;
  }

}

// Works cited
.wc {
  margin-bottom: 0.9em;
}

// Tag cloud
.tagcloud {
  a {
    @include button;
    background-color: $white;
    border: solid 1px $mla-blue;
    clear: left;
    color: $mla-blue;
    display: block;
    float: left;
    font-size: inherit !important;
    margin-bottom: 0.25em;
    padding: 3px 8px;
  }
}

// Featured images
.has-post-thumbnail {
  h2 {
    margin: 0.5em 0 0 0;
  }
}

.post-thumbnail {
  margin: 1em 0;
  max-height: 300px;
  overflow: hidden;

  img {
    height: auto;
    margin-top: -50px;
    width: 100%;
  }
}

.category .tile-tag {
  display: inline;
  font-size: 0.5em;
  position: initial;
  text-transform: uppercase;
  vertical-align: middle;

  &::before {
    margin-right: 0.5em;
  }
}

